# Micro-XRCE-DDS-Client-MCU

./: .cproject  .gitmodules  .mxproject  .project  CMakeLists.txt  Micro-XRCE-DDS-Client-MCU.ioc  README.md
Core/Inc/: FreeRTOSConfig.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  uxr_transport.h
Core/Src/: freertos.c  main.c  rtc.c  stm32f4xx_it.c  usart.c  uxr_transport_uart_it.c  uxr_transport_usb.c
